[package]
name = "uncore-helper"
version = "1.0.1"
edition = "2021"

description = """
This project is

- an educational, modern operating system kernel
- completely written in pure, idiomatic Rust (and assembly where required),
- licensed under the GNU Public License v3 or later, except for parts already licensed under other licenses,
- documented in its entirety (the code via Doc comments, the rest via Markdown and GitHub Pages),
- focused around [a few simple concepts and principles.
"""

authors = ["The unCORE Kernel Community"]
documentation = "https://georglauterbach.github.io/uncore/"
license = "GPL-3.0"
readme = "../README.md"

homepage = "https://georglauterbach.github.io/uncore/"
repository = "https://github.com/georglauterbach/uncore"

keywords = ["operating-system", "os", "kernel", "no-std"]

categories = ["no-std", "config"]

publish = false

# Cargo's auto-detection of library files is turned on. Therefore,
# `src/lib.rs` is automatically detected by Cargo as a freestanding
# library. We need to define some code segments twice, here as well
# as an in `src/main.rs` as this file is tested by Cargo separately.
# This file can then be used in integration tests as well.
autobenches = true
autobins = true
autoexamples = true
autotests = true

[lints]
workspace = true

# -----------------------------------------------
# ----  Profiles  -------------------------------
# -----------------------------------------------

[profile.release]
codegen-units = 1
incremental = true
lto = true
overflow-checks = true

# DO NOT USE this or you will not be able to run tests
# panic = "abort"

[profile.dev]
lto = false

# DO NOT USE this or you will not be able to run tests
# panic = "abort"

# -----------------------------------------------
# ----  Dependencies  ---------------------------
# -----------------------------------------------

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
colored = "2.1.0"
log = "0.4.22"
regex = "1.11.0"
toml = "0.8.19"
wait-timeout = "0.2.0"
which = "6.0.3"

# -----------------------------------------------
# ----  Workspace  ------------------------------
# -----------------------------------------------

[workspace]
members = ["uncore"]

# General lints "inherent" in Rustlang.
[workspace.lints.rust]
# We require docs on all items
missing_docs = "deny"
# We require a debug implementation on all items
missing_debug_implementations = "deny"

# Lint target for code documentation. When running `rustdoc`,
# show an error when using broken links.
[workspace.lints.rustdoc]
all = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "allow"

# Lint target for Clippy ("A collection of lints to catch common
# mistakes and improve your Rust code.", ref:
# https://doc.rust-lang.org/nightly/clippy/)
[workspace.lints.clippy]
# Clippy lint target one. Enables all lints that are on by
# default (correctness, suspicious, style, complexity, perf).
all = "deny"
# Clippy lint target two. Enables lints which are rather strict
# or have occasional false positives.
nursery = "deny"
# Clippy lint target three. Enables new lints that are still
# under development
pedantic = "deny"
# Clippy lint target four. Enable lints for the cargo manifest
# file, a.k.a. Cargo.toml.
cargo = "deny"
# Individual lints go here now:
missing_docs_in_private_items = "deny"
