# Rust toolchain releases can be found under
# https://rust-lang.github.io/rustup-components-history/

# -----------------------------------------------
# ----  Package  --------------------------------
# -----------------------------------------------

[package]
name = "kernel"
edition = "2021"
version = "0.4.0-pre"

authors = ["The unCORE Kernel Community"]

description = "An Operating System Microkernel written in pure, idiomatic Rust"
documentation = "../documentation/"
license = "GPL-3.0"
readme = "../README.md"

homepage = "https://uncore-kernel.org"
repository = "https://github.com/georglauterbach/uncore"

keywords = [
  "operating-system",
  "os",
  "kernel",
  "no-std",
]

categories = [
  "no-std",
  "config",
]

publish = false

# Cargo's auto-detection of library files is turned on. Therefore,
# `src/lib.rs` is automatically detected by Cargo as a freestanding
# library. We need to define some code segments twice, here as well
# as an in `src/main.rs` as this file is tested by Cargo separately.
# This file can then be used in integration tests as well.
autobenches = true
autobins = true
autoexamples = true
autotests = true

# -----------------------------------------------
# ----  Profiles  -------------------------------
# -----------------------------------------------

[profile.release]
codegen-units = 1
incremental = true
lto = true
overflow-checks = true

# DO NOT USE this or you will not be able to run tests
# panic = "abort"

[profile.dev]
lto = false

# DO NOT USE this or you will not be able to run tests
# panic = "abort"

# -----------------------------------------------
# ----  Dependencies  ---------------------------
# -----------------------------------------------

[dependencies]
bootloader = { version = "0.10.9", features = ["default"] } 
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
volatile = "0.2.6"
spin = { version = "0.9.2", features = ["lazy"] }
x86_64 = "0.14.6"
uart_16550 = "0.2.14"

[package.metadata.bootloader]
map-physical-memory = true

# -----------------------------------------------
# ----  Workspace  ------------------------------
# -----------------------------------------------

[workspace]

members = [
  "boot",
]

# -----------------------------------------------
# ----  Tests  ----------------------------------
# -----------------------------------------------

[[test]]
name = "stack_overflow"
harness = false
