# -----------------------------------------------
# ----  Package  --------------------------------
# -----------------------------------------------

[package]
name = "kernel"
edition = "2021"
version = "0.4.0-pre"

authors = ["The unCORE Kernel Community"]

description = "An Operating System Microkernel written in pure, idiomatic Rust"
documentation = "../documentation/"
license = "GPL-3.0"
readme = "../README.md"

homepage = "https://uncore-kernel.org"
repository = "https://github.com/georglauterbach/uncore"

keywords = [
  "operating-system",
  "os",
  "kernel",
  "no-std",
]

categories = [
  "no-std",
  "config",
]

publish = false

# Cargo's auto-detection of library files is turned on. Therefore,
# `src/lib.rs` is automatically detected by Cargo as a freestanding
# library. We need to define some code segments twice, here as well
# as an in `src/main.rs` as this file is tested by Cargo separately.
# This file can then be used in integration tests as well.
autobenches = true
autobins = true
autoexamples = true
autotests = true

# -----------------------------------------------
# ----  Profiles  -------------------------------
# -----------------------------------------------

[profile.release]
codegen-units = 1
incremental = true
lto = true
overflow-checks = true

# DO NOT USE this or you will not be able to run tests
# panic = "abort"

[profile.dev]
lto = false

# DO NOT USE this or you will not be able to run tests
# panic = "abort"

# -----------------------------------------------
# ----  Dependencies  ---------------------------
# -----------------------------------------------

[dependencies]
ansi_rgb = "0.2.0"
arrayvec = { version = "0.7.1", default-features = false }
multiboot2 = "0.13.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.1"
log = "0.4.14"
qemu-exit = "3.0.0"
rgb = "0.8.31"
spin = { version = "0.9.2", features = ["lazy"] }
uart_16550 = "0.2.15"
uefi = { git = "https://github.com/phip1611/uefi-rs", branch = "sys-table-and-handle-from-pointer" }
volatile = "0.4.4"
x86 = "0.44.0"
x86_64 = "0.14.7"

# -----------------------------------------------
# ----  Workspace  ------------------------------
# -----------------------------------------------

[workspace]

members = [
  "test_runner"
  "boot",
  "workspace_helper"
]

# -----------------------------------------------
# ----  Tests  ----------------------------------
# -----------------------------------------------

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "should_panic"
harness = false
