# -----------------------------------------------
# ----  Package  --------------------------------
# -----------------------------------------------

[package]
name = "kernel"
edition = "2021"
version = "0.4.6-pre"

authors = ["The unCORE Kernel Community"]

description = "An operating system kernel written in pure, idiomatic Rust"
documentation = "https://georglauterbach.github.io/uncore/edge/"
license = "GPL-3.0"
readme = "../README.md"

homepage = "https://github.com/georglauterbach/uncore"
repository = "https://github.com/georglauterbach/uncore"

keywords = [
  "operating-system",
  "os",
  "kernel",
  "no-std",
]

categories = [
  "no-std",
  "config",
]

publish = false

# Cargo's auto-detection of library files is turned on. Therefore,
# `src/lib.rs` is automatically detected by Cargo as a freestanding
# library. We need to define some code segments twice, here as well
# as an in `src/main.rs` as this file is tested by Cargo separately.
# This file can then be used in integration tests as well.
autobenches = true
autobins = true
autoexamples = true
autotests = true

[[bin]]
name = "kernel"
path = "src/main.rs"

# -----------------------------------------------
# ----  Profiles  -------------------------------
# -----------------------------------------------

[profile.release]
codegen-units = 1
incremental = true
lto = true
overflow-checks = true

# DO NOT USE this or you will not be able to run tests
# panic = "abort"

[profile.dev]
lto = false

# DO NOT USE this or you will not be able to run tests
# panic = "abort"

# -----------------------------------------------
# ----  General Dependencies  -------------------
# -----------------------------------------------

[dependencies]
ansi_rgb = "0.2.0"
arrayvec = { version = "0.7.2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.1"
log = "0.4.14"
qemu-exit = "3.0.1"
rgb = "0.8.31"
runs_inside_qemu = "1.2.1"
spin = { version = "0.9.2", features = ["lazy"] }
uart_16550 = "0.2.16"
uefi = { git = "https://github.com/rust-osdev/uefi-rs", branch = "main" }
volatile = "0.4.4"

# -----------------------------------------------
# ----  x86 64 Bit Dependencies  ----------------
# -----------------------------------------------

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.46.0"
x86_64 = "0.14.7"
bootloader = { git = "https://github.com/rust-osdev/bootloader", branch = "main" }

# https://docs.rs/bootloader/latest/bootloader/#configuration
[package.metadata.bootloader]
map-physical-memory = true

# -----------------------------------------------
# ----  x86 32 Bit Dependencies  ----------------
# -----------------------------------------------

[target.'cfg(target_arch = "i686")'.dependencies]

# -----------------------------------------------
# ----  ARM 64 Bit Dependencies  ----------------
# -----------------------------------------------

[target.'cfg(target_arch = "aarch64")'.dependencies]

# -----------------------------------------------
# ----  Workspace  ------------------------------
# -----------------------------------------------

[workspace]

members = [
  "helper",
  "test_runner",
]

# -----------------------------------------------
# ----  Tests  ----------------------------------
# -----------------------------------------------

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "should_panic"
harness = false
