cargo-features = ["per-package-target"]

[package]
name = "uncore"
version = "1.0.0-alpha4"
edition = "2021"
workspace = "../"

description = """
This project is

- an educational, modern operating system kernel
- completely written in pure, idiomatic Rust (and assembly where required),
- licensed under the GNU Public License v3 or later, except for parts already licensed under other licenses,
- documented in its entirety (the code via Doc comments, the rest via Markdown and GitHub Pages),
- focused around [a few simple concepts and principles.
"""

authors = ["The unCORE Kernel Community"]
documentation = "https://georglauterbach.github.io/uncore/"
license = "GPL-3.0"
readme = "../README.md"
publish = false

homepage = "https://georglauterbach.github.io/uncore/"
repository = "https://github.com/georglauterbach/uncore"

keywords = [
  "operating-system",
  "os",
  "kernel",
  "no-std",
]

categories = [
  "no-std",
  "config",
]

# Setting this is useful (but requires an entry in `cargo-features`)
# because tools like rust-analyzer do not need extra setup this way.
default-target = "riscv64gc-unknown-none-elf"

# Cargo's auto-detection of library files is turned on. Therefore,
# `src/lib.rs` is automatically detected by Cargo as a freestanding
# library. We need to define some code segments twice, here as well
# as an in `src/main.rs` as this file is tested by Cargo separately.
# This file can then be used in integration tests as well.
autobenches = true
autobins = true
autoexamples = true
autotests = false

[lints]
workspace = true

# -----------------------------------------------
# ----  Dependencies  ---------------------------
# -----------------------------------------------

[build-dependencies]

[dependencies]
linked_list_allocator = "0.10.5"
log = "0.4.20"
riscv-rt = { version = "0.12.0", features = ["s-mode"] }
owo-colors = "4.0.0"
sbi = "0.2.0"
spin = "0.9.8"

# -----------------------------------------------
# ----  Tests  ----------------------------------
# -----------------------------------------------

[[test]]
name = "basic_boot"
harness = false
