[package]
name = "boot"
version = "0.2.0"
edition = "2021"
workspace = "../"

authors = ["The unCORE Kernel Community"]
description = "unCORE Bootimage Creation"
documentation = "../../documentation/"
license = "GPL-3.0"
readme = "../../README.md"

homepage = "https://uncore-kernel.org"
repository = "https://github.com/georglauterbach/uncore"

keywords = [
  "operating-system",
  "os",
  "kernel",
  "bootimage",
  "creation",
]

categories = [
  "no-std",
  "config"
]

publish = false

[dependencies]
bootloader-locator = "0.0.4"
locate-cargo-manifest = "0.2.0"
runner-utils = "0.0.2"
