[package]
name = "boot"
version = "0.1.0"
edition = "2021"
workspace = "../"

authors = ["The unCORE Kernel Community"]
description = "unCORE Bootimage Creation"
documentation = "https://georglauterbach.github.io/uncore/edge/"
license = "GPL-3.0"
readme = "../../README.md"

homepage = "https://github.com/georglauterbach/uncore"
repository = "https://github.com/georglauterbach/uncore"

keywords = [
  "operating-system",
  "os",
  "kernel",
  "bootimage",
  "creation",
]

publish = false

[dependencies]
helper = { path = "../helper/", version = "*" }

bootloader-locator = "0.0.4"
clap = { version = "3.0.14", features = ["derive"] }
log = "0.4.14"
