[package]
name = "helper"
version = "0.1.0"
edition = "2021"
workspace = "../"

authors = ["The unCORE Kernel Community"]
description = "unCORE Bootimage Creation"
documentation = "https://georglauterbach.github.io/uncore/edge/"
license = "GPL-3.0"
readme = "../../README.md"

homepage = "https://github.com/georglauterbach/uncore"
repository = "https://github.com/georglauterbach/uncore"

keywords = [
  "operating-system",
  "os",
  "kernel",
  "helper",
  "common",
]

publish = false

[dependencies]
ansi_rgb = "0.2.0"
bootloader-locator = "0.0.4"
clap = { version = "3.1.2", features = ["derive"] }
clap-cargo = "0.8.0"
clap-verbosity-flag = "1.0.0"
log = "0.4.14"
once_cell = "1.9.0"
rgb = "0.8.31"
