[package]
name = "test_runner"
version = "0.2.0"
edition = "2021"
workspace = "../"

authors = ["The unCORE Kernel Community"]
description = "unCORE Bootimage Creation"
documentation = "https://georglauterbach.github.io/uncore/edge/"
license = "GPL-3.0"
readme = "../../README.md"

homepage = "https://github.com/georglauterbach/uncore"
repository = "https://github.com/georglauterbach/uncore"

keywords = [
  "operating-system",
  "os",
  "kernel",
  "tests",
  "test-runner",
]

publish = false

[dependencies]
workspace_helper = { path = "../workspace_helper/", version = "*" }

log = "0.4.14"
runner-utils = "0.0.2"
