[package]
edition = "2021"
name = "hardware"
version = "0.1.0"

workspace = "../"

authors = [
  "The unCORE Kernel Community",
]

description = "The unCORE OS Kernel Hardware Abstraction Layer"
documentation = "../../documentation/"

readme = "../../README.md"

homepage = "https://uncore-kernel.org"
repository = "https://github.com/georglauterbach/uncore"

license = "GPL-3.0"

keywords = [
  "operating-system",
  "no-std",
  "hardware",
  "abstraction",
  "hal",
]

categories = [
  "no-std",
  "config",
]

publish = false

autobenches = true
autobins = true
autoexamples = true
autotests = true

[dependencies]
helper   = { version = "0.1.0", path = "../helper" }

x86_64 = "0.14.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = "0.10.0"
spin = "0.9.2"
pc-keyboard = "0.5.1"
uart_16550 = "0.2.10"
volatile = "0.4.4"
