[package]
edition = "2021"
name = "helper"
version = "0.1.0"

workspace = "../"

authors = [
  "The unCORE Kernel Community",
]

description = "The unCORE OS Kernel Helper Function Collection"
documentation = "../../documentation/"

readme = "../../README.md"

homepage = "https://uncore-kernel.org"
repository = "https://github.com/georglauterbach/uncore"

license = "GPL-3.0"

keywords = [
  "operating-system",
  "no-std",
  "helper",
]

categories = [
  "no-std",
  "config",
]

publish = false

autobenches = true
autobins = true
autoexamples = true
autotests = true

[dependencies]
bootloader = "0.10.9"
x86_64 = "0.14.6"
