[package]
edition = "2021"
name = "kernel"
version = "0.1.0"

workspace = "../"

authors = ["The unCORE Kernel Community"]

description = "An Operating System Microkernel written in pure, idiomatic Rust"
documentation = "../../documentation/"

readme = "../../README.md"

homepage = "https://uncore-kernel.org"
repository = "https://github.com/georglauterbach/uncore"

license = "GPL-3.0"

keywords = ["operating-system", "os", "kernel", "micro-kernel", "no-std"]

categories = ["no-std", "config"]

publish = false

autobenches = true
autobins = true
autoexamples = true
autotests = true

[dependencies]
bootloader = "0.10.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.5.1"
pic8259_simple = "0.2.0"
spin = "0.9.2"
uart_16550 = "0.2.10"
volatile = "0.4.4"
x86_64 = "0.14.6"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 100 # in seconds

[[test]]
harness = false
name = "stack_overflow"
