[package]
edition = "2021"
name = "kernel"
version = "0.1.0"

workspace = "../"

authors = ["The unCORE Kernel Community"]

description = "An Operating System Microkernel written in pure, idiomatic Rust"
documentation = "../../documentation/"

readme = "../../README.md"

homepage = "https://uncore-kernel.org"
repository = "https://github.com/georglauterbach/uncore"

license = "GPL-3.0"

keywords = ["operating-system", "os", "kernel", "no-std"]

categories = ["no-std", "config"]

publish = false

autobenches = true
autobins = true
autoexamples = true
autotests = true

[dependencies]
hardware = { version = "0.1.0", path = "../hardware" }
helper   = { version = "0.1.0", path = "../helper" }

bootloader = "0.10.9"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 100 # in seconds

# [[test]]
# harness = false
# name = "stack_overflow"
